--- a/canchibolR.html
+++ b/canchibolR.html
@@ -3,92 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resgistro</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        body {
-            background: url(fondoRn.png) no-repeat center center/cover;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: black;
-        }
-        .register-container {
-            background: rgba(255, 255, 255, 0.658);
-            padding: 40px 50px;
-            border-radius: 15px;
-            box-shadow: 0.4px 20px rgba(0, 0, 0, 0.3);
-            text-align: center;
-            width: 350px;
-            backdrop-filter: blur(10px);
-        }
-        h1 {
-            color: black;
-            margin-bottom: 25px;
-            font-size: 1.8rem;
-        }
-        .input-group {
-            display: flex;
-            flex-direction: column;
-            text-align: left;
-            margin-bottom: 15px;
-        }
-        label {
-            font-size: 0.9em;
-            color: black;
-            margin-bottom: 5px;
-        }
-        input {
-            padding: 10px;
-            border: 1px solid #aaaaaa;
-            border-radius: 30px;
-            font-size: 0.95em;
-            outline: none;
-            transition: 0.3;
-        }
-        input:focus {
-            border-color: #588157;
-            box-shadow: 0 0 5px #498a48;
-        }
-        input-error {
-            border-color: red;
-            box-shadow: 0 0 5px rgba(255, 0, 0, 0.4);
-        }
-        .btn-register {
-            background-color: #588157;
-            color: white;
-            border: none;
-            padding: 12px;
-            border-radius: 6px;
-            font-size: 1em;
-            cursor: pointer;
-            width: 100%;
-            margin-top: 10px;
-            transition: background 0.3s;
-        }
-        .btn-register:hover {
-            background-color: #3a5a40;
-        }
-        .login-link {
-            margin-top: 20px;
-            font-size: 0.9em;
-        }
-        .login-link a {
-            color: #588157;
-            text-decoration: none;
-            font-weight: 600;
-            transition: color 0.3;
-        }
-        .login-link a:hover {
-            color: #3a5a40;
-        }
-    </style>
+    <title>Registro</title>
+     <link rel="stylesheet" href="styleR.css" />
 </head>
 <body>
     <div class="register-container">
