--- a/menu.html
+++ b/menu.html
@@ -9,12 +9,14 @@
 </head>
 <body>
   <header>
-    <div>
-      <a class="logo-class" href="index.html">
-        <img src="img/logo_canchas.png" alt="Logo de pagina">
-      </a>
-    </div>
+  <div class="header-top">
+    <a class="logo-class" href="index.html">
+      <img src="img/logo_canchas.png" alt="Logo de pagina">
+    </a>
     <h1>Administración de Canchas de Fútbol</h1>
+  </div>
+
+  <div class="header-bottom">
     <nav>
       <ul>
         <li><a href="#arbitros">Árbitros</a></li>
@@ -22,12 +24,14 @@
         <li><a href="#canchas">Canchas</a></li>
         <li><a href="#partidos">Partidos</a></li>
         <li><a href="#reportes">Reportes</a></li>
-          <li><a href="#usuarios">Usuarios</a></li>
-          <li id="sesion-item"><a href="#sesion">Cerrar Sesión</a></li>
-
+        <li><a href="#usuarios">Usuarios</a></li>
       </ul>
     </nav>
-  </header>
+    <div id="sesion-item">
+      <a href="#sesion">Cerrar Sesión</a>
+    </div>
+  </div>
+</header>
 
   <main>
     <section id="dashboard" class="modulo">
