--- a/canchibolI.html
+++ b/canchibolI.html
@@ -1,134 +1,193 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesion</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        body {
-            background: url(fondoIn.png) no-repeat center/cover;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: black;
-        }
-        .login-container {
-            background: rgba(255, 255, 255, 0.658);
-            padding: 40px 50px;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-            text-align: center;
-            width: 320px;
-            backdrop-filter: blur(10px);
-            overflow: hidden;
-        }
-        h1 {
-            color: black;
-            margin-bottom: 25px;
-            font-size: 1.8em;
-        }
-        .input-group {
-            display: flex;
-            flex-direction: column;
-            text-align: left;
-            margin-bottom: 20xp;
-        }
-        label {
-            font-size: 0.9em;
-            color: black;
-            margin-bottom: 5px;
-            display: block;
-        }
-        input {
-            padding: 10px;
-            border: 1px solid #aaaaaa;
-            border-radius: 25px;
-            font-size: 0.95em;
-            outline: none;
-            transition: 0.3s;
-        }
-        input:focus {
-            border-color: #588157;
-            box-shadow: 0 0 5px rgba(0, 180, 216, 0.5);
-        }
-        .password-toggle {
-            position: relative;
-        }
-        .toggle-btn {
-            position: absolute;
-            right: 15px;
-            top: 10px;
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 0.9em;
-        }
-        .error-msg {
-            color: red;
-            font-size: 0.8em;
-            margin-top: 3px;
-            display: none;
-        }
-        .checkbox-group {
-            text-align: left;
-            font-size: 0.9em;
-            margin-bottom: 15px;
-        }
-        .btn-login {
-            background-color: #588157;
-            color: rgb(255, 255, 255);
-            border: none;
-            padding: 12px;
-            border-radius: 30px;
-            font-size: 1em;
-            cursor: pointer;
-            width: 100%;
-            transition: background 0.3s;
-        }
-        .btn-login:hover {
-            background-color: #588157;
-        }
-        
-        .register-link {
-            color: #0077b6;
-            text-decoration: none;
-            font-weight: 600;
-            transition: color 0.3;
-        }
-        .register-link a:hover {
-            color: #3a5a40;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio de Sesion</title>
 
-    </style>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    body {
+      background: url(fondoIn.png) no-repeat center/cover;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #000;
+    }
+
+    .login-container {
+      background: rgba(255, 255, 255, 0.8);
+      padding: 40px 50px;
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      width: 320px;
+      backdrop-filter: blur(10px);
+    }
+
+    h1 {
+      color: #000;
+      margin-bottom: 25px;
+      font-size: 1.8em;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+      text-align: left;
+    }
+
+    label {
+      font-size: 0.9em;
+      color: #000;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #aaa;
+      border-radius: 25px;
+      font-size: 0.95em;
+      outline: none;
+      transition: 0.3s;
+    }
+
+    input:focus {
+      border-color: #3a5a40;
+      box-shadow: 0 0 5px rgba(88, 129, 87, 0.5);
+    }
+
+    .password-toggle {
+      position: relative;
+    }
+
+    .toggle-btn {
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 0.9em;
+    }
+
+    .error-msg {
+      color: red;
+      font-size: 0.8em;
+      margin-top: 3px;
+      display: none;
+    }
+
+    .checkbox-group {
+      text-align: left;
+      font-size: 0.9em;
+      margin-bottom: 15px;
+    }
+
+    .btn-login {
+      background-color: #588157;
+      color: #fff;
+      border: none;
+      padding: 12px;
+      border-radius: 30px;
+      font-size: 1em;
+      cursor: pointer;
+      width: 100%;
+      transition: background 0.3s;
+    }
+
+    .btn-login:hover {
+      background-color: #3a5a40;
+    }
+
+    .extra-links {
+      margin-top: 10px;
+      font-size: 0.9em;
+    }
+
+    .extra-links a {
+      color: #0077b6;
+      text-decoration: none;
+    }
+
+    @media (max-width: 480px) {
+      .login-container {
+        width: 90%;
+        padding: 30px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <div class="login-container">
-        <h1>Iniciar Sesion</h1>
-        <form id="loginForms">
-        <form action="#" method="post">
-            <div class="input-group">
-                <label for="usuario">Usuario o Correo</label>
-                <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu usario" required>
-                <span class="error-msg" id="usuario-error">Campo obligatorio</span>
-            </div>
-            <br>
-            <div class="input-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
-            </div>
-            <br>
-            <button type="submit" class="btn-login">Entrar</button>
-        </form>
-        <br>
-        <div class="register-link">¿No tienes una cuenta? <a href="canchibolR.html">Registrate</a>
-        </div>
-    </div>
+  <div class="login-container">
+    <h1>Iniciar Sesión</h1>
+
+    <form id="loginForm">
+      <div class="input-group">
+        <label for="usuario">Usuario o Correo</label>
+        <input type="text" id="usuario" name="usuario" required>
+        <span class="error-msg" id="usuario-error">Campo obligatorio</span>
+      </div>
+
+      <div class="input-group password-toggle">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" name="password" required>
+        <button type="button" class="toggle-btn" id="togglePassword">ver</button>
+        <span class="error-msg" id="password-error">Campo obligatorio</span>
+      </div>
+
+      <div class="checkbox-group">
+        <input type="checkbox" id="recordar">
+        <label for="recordar">Recordarme</label>
+      </div>
+
+      <button type="submit" class="btn-login">Entrar</button>
+
+      <div class="extra-links">
+        <a href="#">¿Olvidaste tu contraseña?</a><br>
+        ¿No tienes cuenta? <a href="canchibolR.html">Registrate</a>
+      </div>
+    </form>
+  </div>
+
+  <script>
+    const togglePassword = document.getElementById('togglePassword');
+    const password = document.getElementById('password');
+    togglePassword.addEventListener('click', () => {
+      password.type = password.type === 'password' ? 'text' : 'password';
+    });
+
+    const usuario = document.getElementById('usuario');
+    const usuarioError = document.getElementById('usuario-error');
+    const passwordError = document.getElementById('password-error');
+
+    usuario.addEventListener('input', () => {
+      usuarioError.style.display = usuario.value.trim()? 'none':'block';
+    });
+
+    password.addEventListener('input', () => {
+      passwordError.style.display = password.value.trim() ?'none':'block';
+    });
+
+    const form = document.getElementById('loginForm');
+    form.addEventListener('submit', (e) => {
+      if (!usuario.value.trim() || !password.value.trim()) {
+        e.preventDefault();
+        usuarioError.style.display = !usuario.value.trim() ? 'block':'none';
+        passwordError.style.display = !password.value.trim() ? 'block':'none';
+      } else {
+        alert("Inicio de sesión exitoso (simulado)");
+      }
+    });
+  </script>
 </body>
 </html>
