--- a/canchibolR.html
+++ b/canchibolR.html
@@ -1,71 +1,230 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
-     <link rel="stylesheet" href="styleR.css" />
-</head>
-<body>
-    <div class="register-container">
-        <h1>Crear cuenta</h1>
-        <form id="registroForm">
-            <div class="input-group">
-                <label for="usuario">Usuario</label>
-                <input type="text" id="usuario" placeholder="Crea un nombre de usuario">
-            </div>
-            <div class="input-group">
-                <label for="correo">Correo electronico</label>
-                <input type="email" id="correo" placeholder="ejemplo@correo.com">
-            </div>
-            <div class="input-group">
-                <label for="telefono">Telefono</label>
-                <input type="tel" id="telefono" placeholder="Ej. 5544332211">
-            </div>
-            <div class="input-group">
-                <label for="password">Crear contraseña</label>
-                <input type="password" id="password" placeholder="Crea una contraseña">
-            </div>
-            <div class="input-group">
-                <label for="confirmar">Confirmar contraseña</label>
-                <input type="confirmar" id="confrimar" placeholder="Repite la contraseña">
-            </div>
-            <button type="submit" class="btn-register">Registrarse</button>
-        </form>
-        <div class="login-link">
-            ¿Ya tienes una cuenta? <a href="CanchibolI.html">Inicia Sesion</a>
-        </div>
-    </div>
-    <script>
-        const form=document.getElementById('registroForm');
-        form.addEventListener('submit',(e)=> {
-            const usario=document.getElementById('usuario');
-            const correo=document.getElementById('correo');
-            const telefono=document.getElementById('telefono');
-            const password=document.getElementById('password');
-            const confirmar=document.getElementById('confirmar');
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro - Canchibol</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
 
-            let valido=true;
-            const marcaError=(campo)=> {
-                campo.classList.add('error');
-                valido=false;
-            };
-            const limpiarError=(campo)=>{
-                campo.classList.remove('error');
-            };
-            [usuario, correo, telefono, password, confirmar].forEach(limpiarError);
-            [usuario, correo, telefono, password, confirmar].forEach((campo)=>{
-                if(!campo.value.trim())marcaError(campo);
-            });
-            if (password.value.trim()&&confirmar.value.trim()&&password.value !==confirmar.value){
-                marcarError(password);
-                marcarError(confirmar);
-                alert("Las contraseñas no coinciden");
-            }
-            if(valido&&password.value===confirmar.value){
-                window.open("ppppp");
-            }
-        });
-    </script>
+    body {
+      background: url(fondoIn.png) no-repeat center/cover;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #000;
+    }
+
+    .register-container {
+      background: rgba(255, 255, 255, 0.8);
+      padding: 40px 50px;
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      width: 350px;
+      backdrop-filter: blur(10px);
+    }
+
+    h1 {
+      color: #000;
+      margin-bottom: 25px;
+      font-size: 1.8em;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+      text-align: left;
+      position: relative;
+    }
+
+    label {
+      font-size: 0.9em;
+      color: #000;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #aaa;
+      border-radius: 25px;
+      font-size: 0.95em;
+      outline: none;
+      transition: 0.3s;
+    }
+
+    input:focus {
+      border-color: #3a5a40;
+      box-shadow: 0 0 5px rgba(88, 129, 87, 0.5);
+    }
+
+    .toggle-btn {
+      position: absolute;
+      right: 15px;
+      top: 32px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 0.9em;
+    }
+
+    .error-msg {
+      color: red;
+      font-size: 0.8em;
+      margin-top: 3px;
+      display: none;
+    }
+
+    .btn-register {
+      background-color: #588157;
+      color: #fff;
+      border: none;
+      padding: 12px;
+      border-radius: 30px;
+      font-size: 1em;
+      cursor: pointer;
+      width: 100%;
+      transition: background 0.3s;
+    }
+
+    .btn-register:hover {
+      background-color: #3a5a40;
+    }
+
+    .login-link {
+      margin-top: 15px;
+      font-size: 0.9em;
+    }
+
+    .login-link a {
+      color: #0077b6;
+      text-decoration: none;
+    }
+
+    @media (max-width: 480px) {
+      .register-container {
+        width: 90%;
+        padding: 30px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="register-container">
+    <h1>Crear cuenta</h1>
+    <form id="registroForm">
+      <div class="input-group">
+        <label for="usuario">Usuario</label>
+        <input type="text" id="usuario" required>
+        <span class="error-msg" id="usuario-error">Campo obligatorio</span>
+      </div>
+
+      <div class="input-group">
+        <label for="correo">Correo electrónico</label>
+        <input type="email" id="correo" required>
+        <span class="error-msg" id="correo-error">Correo invalido</span>
+      </div>
+
+      <div class="input-group">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" required>
+        <button type="button" class="toggle-btn" id="togglePass1">ver</button>
+        <span class="error-msg" id="password-error">Campo obligatorio</span>
+      </div>
+
+      <div class="input-group">
+        <label for="confirmar">Confirmar contraseña</label>
+        <input type="password" id="confirmar" required>
+        <button type="button" class="toggle-btn" id="togglePass2">👁</button>
+        <span class="error-msg" id="confirmar-error">Las contraseñas no coinciden</span>
+      </div>
+
+      <button type="submit" class="btn-register">Registrarse</button>
+
+      <div class="login-link">
+        ¿Ya tienes una cuenta? <a href="canchibolI.html">Inicia sesion</a>
+      </div>
+    </form>
+  </div>
+
+  <script>
+    const togglePass1 = document.getElementById('togglePass1');
+    const togglePass2 = document.getElementById('togglePass2');
+    const pass1 = document.getElementById('password');
+    const pass2 = document.getElementById('confirmar');
+
+    togglePass1.addEventListener('click', () => {
+      pass1.type = pass1.type === 'password' ? 'text':'password';
+    });
+    togglePass2.addEventListener('click', () => {
+      pass2.type = pass2.type === 'password' ? 'text' :'password';
+    });
+
+    const usuario = document.getElementById('usuario');
+    const correo = document.getElementById('correo');
+    const password = document.getElementById('password');
+    const confirmar = document.getElementById('confirmar');
+
+    const usuarioError = document.getElementById('usuario-error');
+    const correoError = document.getElementById('correo-error');
+    const passwordError = document.getElementById('password-error');
+    const confirmarError = document.getElementById('confirmar-error');
+
+    usuario.addEventListener('input', () => {
+      usuarioError.style.display = usuario.value.trim()? 'none':'block';
+    });
+
+    correo.addEventListener('input', () => {
+      const correoValido = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(correo.value);
+      correoError.style.display = correoValido ? 'none':'block';
+    });
+
+    password.addEventListener('input', () => {
+      passwordError.style.display = password.value.trim() ? 'none':'block';
+    });
+
+    confirmar.addEventListener('input', () => {
+      confirmarError.style.display = (confirmar.value === password.value) ?'none':'block';
+    });
+
+    const form = document.getElementById('registroForm');
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      let valido = true;
+
+      if (!usuario.value.trim()) {
+        usuarioError.style.display = 'block';
+        valido = false;
+      }
+
+      const correoValido = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(correo.value);
+      if (!correoValido) {
+        correoError.style.display = 'block';
+        valido = false;
+      }
+
+      if (!password.value.trim()) {
+        passwordError.style.display = 'block';
+        valido = false;
+      }
+
+      if (password.value !== confirmar.value) {
+        confirmarError.style.display = 'block';
+        valido = false;
+      }
+
+      if (valido) {
+        alert("Registro exitoso (simulado)");
+      }
+    });
+  </script>
 </body>
 </html>
