--- a/canchibolI.html
+++ b/canchibolI.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio de Sesion</title>
-
+  <title>Inicio de Sesión - Canchibol</title>
   <style>
     * {
       margin: 0;
@@ -129,8 +128,7 @@
 
 <body>
   <div class="login-container">
-    <h1>Iniciar Sesión</h1>
-
+    <h1>Iniciar Sesion</h1>
     <form id="loginForm">
       <div class="input-group">
         <label for="usuario">Usuario o Correo</label>
@@ -154,7 +152,7 @@
 
       <div class="extra-links">
         <a href="#">¿Olvidaste tu contraseña?</a><br>
-        ¿No tienes cuenta? <a href="canchibolR.html">Registrate</a>
+        ¿No tienes cuenta? <a href="canchibolR.html">Regístrate</a>
       </div>
     </form>
   </div>
@@ -171,11 +169,11 @@
     const passwordError = document.getElementById('password-error');
 
     usuario.addEventListener('input', () => {
-      usuarioError.style.display = usuario.value.trim()? 'none':'block';
+      usuarioError.style.display = usuario.value.trim() ? 'none': 'block';
     });
 
     password.addEventListener('input', () => {
-      passwordError.style.display = password.value.trim() ?'none':'block';
+      passwordError.style.display = password.value.trim() ? 'none' : 'block';
     });
 
     const form = document.getElementById('loginForm');
@@ -183,9 +181,9 @@
       if (!usuario.value.trim() || !password.value.trim()) {
         e.preventDefault();
         usuarioError.style.display = !usuario.value.trim() ? 'block':'none';
-        passwordError.style.display = !password.value.trim() ? 'block':'none';
+        passwordError.style.display = !password.value.trim() ?'block' : 'none';
       } else {
-        alert("Inicio de sesión exitoso (simulado)");
+        alert("Inicio de sesion exitoso");
       }
     });
   </script>
