--- a/canchibolR.html
+++ b/canchibolR.html
@@ -130,7 +130,7 @@
       <div class="input-group">
         <label for="correo">Correo electrónico</label>
         <input type="email" id="correo" required>
-        <span class="error-msg" id="correo-error">Correo invalido</span>
+        <span class="error-msg" id="correo-error">Correo inválido</span>
       </div>
 
       <div class="input-group">
@@ -162,10 +162,10 @@
     const pass2 = document.getElementById('confirmar');
 
     togglePass1.addEventListener('click', () => {
-      pass1.type = pass1.type === 'password' ? 'text':'password';
+      pass1.type = pass1.type === 'password' ? 'text' :'password';
     });
     togglePass2.addEventListener('click', () => {
-      pass2.type = pass2.type === 'password' ? 'text' :'password';
+      pass2.type = pass2.type === 'password'?'text' : 'password';
     });
 
     const usuario = document.getElementById('usuario');
@@ -179,20 +179,20 @@
     const confirmarError = document.getElementById('confirmar-error');
 
     usuario.addEventListener('input', () => {
-      usuarioError.style.display = usuario.value.trim()? 'none':'block';
+      usuarioError.style.display = usuario.value.trim() ? 'none' :'block';
     });
 
     correo.addEventListener('input', () => {
       const correoValido = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(correo.value);
-      correoError.style.display = correoValido ? 'none':'block';
+      correoError.style.display = correoValido ? 'none' : 'block';
     });
 
     password.addEventListener('input', () => {
-      passwordError.style.display = password.value.trim() ? 'none':'block';
+      passwordError.style.display = password.value.trim() ? 'none': 'block';
     });
 
     confirmar.addEventListener('input', () => {
-      confirmarError.style.display = (confirmar.value === password.value) ?'none':'block';
+      confirmarError.style.display = (confirmar.value === password.value) ? 'none' : 'block';
     });
 
     const form = document.getElementById('registroForm');
@@ -222,7 +222,7 @@
       }
 
       if (valido) {
-        alert("Registro exitoso (simulado)");
+        alert("Registro exitoso");
       }
     });
   </script>
