implementacion de ventanas

--- a/tabla_posiciones.html
+++ b/tabla_posiciones.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabla de Posiciones</title>
-  <link rel="stylesheet" href="style.css"> <!-- tu CSS principal -->
+  <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
   <header>
@@ -18,9 +18,9 @@
     <div class="header-bottom">
       <nav>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="menu.html">Inicio</a></li>
           <li><a href="reportes.html">Reportes</a></li>
-          <li><a href="estadisticas.html">Estadísticas</a></li>
+          <li><a href="estadisticas.html"></a></li>/*vemos que le ponemos aqui*/
         </ul>
       </nav>
       <div id="sesion-item"><a href="#">Cerrar Sesión</a></div>
@@ -75,7 +75,7 @@
               <td>16</td><td>10</td><td>+6</td><td>18</td>
             </tr>
              <tr>
-              <td>1</td>
+              <td>4</td>
               <td>Pachuca</td>
               <td>10</td><td>3</td><td>2</td><td>5</td>
               <td>12</td><td>14</td><td>+4</td><td>15</td>
