--- a/canchibolR.html
+++ b/canchibolR.html
@@ -130,7 +130,7 @@
       <div class="input-group">
         <label for="correo">Correo electrónico</label>
         <input type="email" id="correo" required>
-        <span class="error-msg" id="correo-error">Correo inválido</span>
+        <span class="error-msg" id="correo-error">Correo invalido</span>
       </div>
 
       <div class="input-group">
@@ -143,7 +143,7 @@
       <div class="input-group">
         <label for="confirmar">Confirmar contraseña</label>
         <input type="password" id="confirmar" required>
-        <button type="button" class="toggle-btn" id="togglePass2">👁</button>
+        <button type="button" class="toggle-btn" id="togglePass2">ver</button>
         <span class="error-msg" id="confirmar-error">Las contraseñas no coinciden</span>
       </div>
 
