--- a/Inicio.html
+++ b/Inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canchibol</title>
+    <title>Principal</title>
 
 <style>
     * {
@@ -127,11 +127,12 @@
     }
 </style>
 </head>
-<body>
+
+<body>  
     <header>
         <div class="logo">Canchibol</div>
         <button class="menu-btn" id="abrirMenu">
-            <img src="menu.png" alt="Menu" class="hamburguesa">
+            <img src="menu.png" alt="Menu" class="hamburguesa">  
         </button>
         </header>
         <nav class="side-menu" id="sideMenu">
@@ -139,7 +140,7 @@
                 <a href="#">Registro de partidos</a>
                 <a href="#">jhgfc</a>
             </ul>
-        </nav>
+        </nav> 
     
 
     <main>
@@ -147,7 +148,7 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="canchibolI.html" class="btn">Iniciar sesion</a>
+                <a href="canchibolI.html" class="btn">Iniciar sesión</a>
                 <a href="canchibolR.html" class="btn">Registrarse</a>
             </div>
         </div>
@@ -156,12 +157,13 @@
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
 
-    <script>
+    <script>  
         const abrirMenu = document.getElementById('abrirMenu');
         const sideMenu = document.getElementById('sideMenu');
         abrirMenu.addEventListener('click', () => {
             sideMenu.classList.toggle('active');
         });
-    </script>
+    </script> 
+
 </body>
 </html>
