cambio de ruta de img

--- a/Inicio.html
+++ b/Inicio.html
@@ -132,7 +132,7 @@
     <header>
         <div class="logo">Canchibol</div>
         <button class="menu-btn" id="abrirMenu">
-            <img src="menu.png" alt="Menu" class="hamburguesa">  
+            <img src="img/menu.png" alt="Menu" class="hamburguesa">  <!--cambiar ruta de imagen aqui-->
         </button>
         </header>
         <nav class="side-menu" id="sideMenu">
@@ -148,8 +148,8 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="canchibolI.html" class="btn">Iniciar sesión</a>
-                <a href="canchibolR.html" class="btn">Registrarse</a>
+                <a href="Login.html" class="btn">Iniciar sesión</a>
+                <a href="Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
     </main>
