--- a/Registro.html
+++ b/Registro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro - Canchibol</title>
+  <title>Registro</title>
   <style>
     * {
       margin: 0;
@@ -130,7 +130,7 @@
       <div class="input-group">
         <label for="correo">Correo electrónico</label>
         <input type="email" id="correo" required>
-        <span class="error-msg" id="correo-error">Correo invalido</span>
+        <span class="error-msg" id="correo-error">Correo inválido</span>
       </div>
 
       <div class="input-group">
@@ -150,7 +150,7 @@
       <button type="submit" class="btn-register">Registrarse</button>
 
       <div class="login-link">
-        ¿Ya tienes una cuenta? <a href="canchibolI.html">Inicia sesion</a>
+        ¿Ya tienes una cuenta? <a href="canchibolI.html">Inicia sesión</a>
       </div>
     </form>
   </div>
