--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio de Sesión - Canchibol</title>
+  <title>Inicio de Sesión</title>
   <style>
     * {
       margin: 0;
@@ -128,7 +128,7 @@
 
 <body>
   <div class="login-container">
-    <h1>Iniciar Sesion</h1>
+    <h1>Iniciar Sesión</h1>
     <form id="loginForm">
       <div class="input-group">
         <label for="usuario">Usuario o Correo</label>
@@ -152,7 +152,7 @@
 
       <div class="extra-links">
         <a href="#">¿Olvidaste tu contraseña?</a><br>
-        ¿No tienes cuenta? <a href="canchibolR.html">Regístrate</a>
+        ¿No tienes cuenta? <a href="Registro.html">Regístrate</a>
       </div>
     </form>
   </div>
