Creacion archivos js

--- a/Inicio.html
+++ b/Inicio.html
@@ -37,13 +37,7 @@
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
 
-    <script>  
-        const abrirMenu = document.getElementById('abrirMenu');
-        const sideMenu = document.getElementById('sideMenu');
-        abrirMenu.addEventListener('click', () => {
-            sideMenu.classList.toggle('active');
-        });
-    </script> 
+    <script src="javascript/inicio.js"> </script> 
 
 </body>
 </html>
