ya quite mi pto menu pinches jodidos envidiosos

--- a/canchibolI.html
+++ b/canchibolI.html
@@ -183,7 +183,7 @@
         usuarioError.style.display = !usuario.value.trim() ? 'block':'none';
         passwordError.style.display = !password.value.trim() ?'block' : 'none';
       } else {
-        <a href="tabla_de_partidos.html" class="btn-login"></a>
+        window.location.href="tabla_de_partidos.html";
       }
     });
   </script>
