Ya estaras contento Vela

--- a/Inicioo.html
+++ b/Inicioo.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Canchibol</div>
+        <div class="logo"><a href=""></a></div>
        
         </header>
     <main>
@@ -130,7 +130,7 @@
     <footer>
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
-
+<script src="javascript/inicio.js"> </script> 
     
 </body>
 </html>
