--- a/Loginn.html
+++ b/Loginn.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="login-container">
-    <h1>Iniciar Sesion</h1>
+    <h1>Iniciar Sesión</h1>
     <form id="loginForm">
       <div class="input-group">
         <label for="usuario">Usuario o Correo</label>
@@ -34,7 +34,7 @@
 
       <div class="extra-links">
         <a href="#">¿Olvidaste tu contraseña?</a><br>
-        ¿No tienes cuenta? <a href="canchibolR.html">Regístrate</a>
+        ¿No tienes cuenta? <a href="Registro.html">Regístrate</a>
       </div>
     </form>
   </div>
