--- a/Registro.html
+++ b/Registro.html
@@ -41,7 +41,7 @@
       <button type="submit" class="btn-register">Registrarse</button>
 
       <div class="login-link">
-        ¿Ya tienes una cuenta? <a href="Login.html">Inicia sesión</a>
+        ¿Ya tienes una cuenta? <a href="Loginn.html">Inicia sesión</a>
       </div>
     </form>
   </div>
