--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -17,7 +17,7 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="Loginn.html" class="btn">Iniciar sesion</a>
+                <a href="Loginn.html" class="btn">Iniciar sesión</a>
                 <a href="Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
