Commit para trabajar

--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canchibol</title>
-   <link rel="stylesheet" href="/css/inicio.css" />
+   <link rel="stylesheet" href="/CSS/inicio.css" />
 
 </head>
 <body>
     <header>
-        <div class="logo"><a href=""></a></div>
-       
+         <a class="logo-class" href="Inicio.html">
+      <img src="/img/logo_canchas.png" alt="Logo de pagina">
+    </a>
         </header>
     <main>
         <div class="contenido">
@@ -21,7 +22,144 @@
                 <a href="Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
-    </main>
+         <section class="tabla_decreto" class="modulo">
+             <h2>Panel Principal</h2>
+         <div class="tarjetas">
+             <div class="card">Partidos de Hoy: <strong>0</strong></div>
+             <div class="card">Árbitros Disponibles: <strong>0</strong></div>
+             <div class="card">Canchas Libres: <strong>0</strong></div>
+        </div>
+    </section>
+        <section class="tabla_de_juegos">
+        <div class="contenedor-tabla modulo">
+            <h2>CALENDARIO DE PARTIDOS</h2>
+            
+            <div class="seccion-estadio">
+                <h1 class="nombre-estadio"></h1>
+                <h2 class="fecha-estadio">MIÉRCOLES 05 DE NOVIEMBRE 2025</h2>
+                <table class="tabla-partidos">
+                    <thead>
+                        <tr>
+                            <th>HORA</th>
+                            <th>EQUIPO LOCAL</th>
+                            <th></th>
+                            <th>EQUIPO VISITANTE</th>
+                            <th>CAMPO</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">RHINOS</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">DEPORTIVO DINA</td>
+                            <td class="campo">1</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">FRANCO CANADIENSE</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">RVA INSTALACIONES</td>
+                            <td class="campo">2</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">MORELLA</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">CHELSEA</td>
+                            <td class="campo">3</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">SURTIDO RICO</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">REAL FC</td>
+                            <td class="campo">4</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="seccion-estadio">
+                <h1 class="nombre-estadio"></h1>
+                <h2 class="fecha-estadio">JUEVES 06 DE NOVIEMBRE 2025</h2>
+                <table class="tabla-partidos">
+                    <thead>
+                        <tr>
+                            <th>HORA</th>
+                            <th>EQUIPO LOCAL</th>
+                            <th></th>
+                            <th>EQUIPO VISITANTE</th>
+                            <th>CAMPO</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">LIVERPOOL</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">REAL ACADEMICOS</td>
+                            <td class="campo">2</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">UNIVERSIDAD</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">VENUS UNITED</td>
+                            <td class="campo">3</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="seccion-estadio">
+                <h1 class="nombre-estadio"></h1>
+                <h2 class="fecha-estadio">JUEVES 06 DE NOVIEMBRE 2025</h2>
+                <table class="tabla-partidos">
+                    <thead>
+                        <tr>
+                            <th>HORA</th>
+                            <th>EQUIPO LOCAL</th>
+                            <th></th>
+                            <th>EQUIPO VISITANTE</th>
+                            <th>CAMPO</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">LOS JEQUES</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">REAL SOCIEDAD</td>
+                            <td class="campo">1</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">BACACHITOS</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">DEPORTIVO MCY</td>
+                            <td class="campo">2</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">RED DEVILS</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">COLOMBIA</td>
+                            <td class="campo">3</td>
+                        </tr>
+                        <tr>
+                            <td class="hora-partido">08:50</td>
+                            <td class="equipo-local">BARRIOS UNIDOS</td>
+                            <td class="vs">VS</td>
+                            <td class="equipo-visitante">TAPATIAS</td>
+                            <td class="campo">4</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+</main>
     <footer>
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
