--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -6,107 +6,6 @@
     <title>Canchibol</title>
    <link rel="stylesheet" href="/CSS/inicio.css" />
 
-
-
-   <style>
-     * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        background: url(../img/fondoInicio.jpg) no-repeat center/cover;
-        color: white;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-    }
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px 40px;
-        background: rgba(0, 0, 0, 0.6);
-    }
-    .logo {
-        font-size: 1.3em;
-        font-weight: bold;
-        letter-spacing: 1px;
-    }
-    .menu-btn .icono {
-        font-size: 1.6em;
-    }
-
-    .side-menu {
-        position: fixed;
-        top: 0;
-        right: -250px;
-        width: 250px;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.74);
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        text-align: center;
-        justify-content: center;
-        gap: 30px;
-        transition: right 0.4s ease;
-        z-index: 9;
-    }
-    .side-menu a {
-        color: white;
-        text-decoration: none;
-        font-size: 1.2em;
-        transition: color 0.3s;
-    }
-    .side-menu a:hover {
-        color: #588157;
-    }
-    .side-menu.active {
-        right: 0;
-    }
-    
-    main {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        background: rgba(0, 0, 0, 0.6);
-    }
-    .contenido h2 {
-        font-size: 1.3em;
-        letter-spacing: 2px;
-        color: white;
-    }
-    .contenido h1 {
-        font-size: 2.5em;
-        margin: 10px 0 30px;
-        font-weight: bold;
-    }
-    .botones {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        align-items: center;
-    }
-    .btn {
-        text-decoration: none;
-        color: white;
-        border: 2px solid white;
-        padding: 10px 30px;
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-    .btn:hover {
-        background-color: white;
-        color: black;
-    }
-   </style>
-
-
 </head>
 <body>
     <header>
@@ -119,7 +18,7 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="Loginn.html" class="btn">Iniciar sesión</a>
+                <a href="Loginn.html" class="btn">Iniciar sesion</a>
                 <a href="Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
