--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -18,8 +18,8 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="Loginn.html" class="btn">Iniciar sesion</a>
-                <a href="Registro.html" class="btn">Registrarse</a>
+                <a href="/html/Loginn.html" class="btn">Iniciar sesión</a>
+                <a href="/html/Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
          <section class="tabla_decreto" class="modulo">
@@ -163,7 +163,7 @@
     <footer>
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
-<script src="javascript/inicio.js"> </script> 
+<script src="/javascript/inicio.js"> </script> 
     
 </body>
 </html>
