--- a/html/Registro.html
+++ b/html/Registro.html
@@ -46,7 +46,7 @@
     </form>
   </div>
 
-  <script src="javascript/registro.js"> </script>
+  <script src="/javascript/registro.js"> </script>
 
 </body>
 </html>
