--- a/html/credenciales_arbitros.html
+++ b/html/credenciales_arbitros.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Árbitros</title>
-  <link rel="stylesheet" href="css/credenciales_arbitros.css">
+  <link rel="stylesheet" href="/css/credenciales_arbitros.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <script src="javascript/arbitros.js"></script>
+  <script src="/javascript/arbitros.js"></script>
 
 </body>
 
