--- a/html/Loginn.html
+++ b/html/Loginn.html
@@ -69,6 +69,6 @@
       }
     });
   </script>
-  <script src="javascript/login.js"></script>
+  <script src="/javascript/login.js"></script>
 </body>
 </html>
