actualizacion en partidos y menú

--- a/partidos.html
+++ b/partidos.html
@@ -14,9 +14,8 @@
     <div class="encabezado">
       <h2>Próximos partidos</h2>
 
-      <!-- Calendario (3 semanas) -->
       <div class="calendario">
-        <ul>
+        <ul class="pj_lista">
           <!-- Semana 1 -->
           <li><span class="pj_dia_txt">Vie</span><span class="pj_dia">7</span><span class="pj_cant_partidos">74</span></li>
           <li><span class="pj_dia_txt">Sáb</span><span class="pj_dia">8</span><span class="pj_cant_partidos">54</span></li>
