otra vez yo dios

--- a/html/Dashboard-admin.html
+++ b/html/Dashboard-admin.html
@@ -19,11 +19,11 @@
     <nav>
       <ul>
        <li><a href="/html/credenciales_arbitros.html">Árbitros</a></li>
-       <li><a href="#equipos">Equipos</a></li>
+        <!-- <li><a href="#equipos">Equipos</a></li>
        <li><a href="#partidos">Partidos</a></li>
        <li><a href="#reportes">Reportes</a></li>
        <li><a href="#canchas">Canchas</a></li>
-       <li><a href="#partidos">Partidos</a></li>      
+       <li><a href="#partidos">Partidos</a></li>  -->   
       </ul>
     </nav>
   
