--- a/html/credenciales_arbitros.html
+++ b/html/credenciales_arbitros.html
@@ -20,8 +20,8 @@
       <nav>
         <ul>  
           <li><a href="/html/Dashboard-admin.html">Partidos</a></li>
-          <li><a href="#">Jugadores</a></li>
-          <li><a href="#">Equipos</a></li>
+           <!-- <li><a href="#">Jugadores</a></li>
+          <li><a href="#">Equipos</a></li> -->
         </ul>
       </nav>
 
