--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canchibol</title>
+    <title>Inicio</title>
    <link rel="stylesheet" href="/CSS/inicio.css" />
 
 </head>
 <body>
     <header>
-         <a class="logo-class" href="Inicio.html">
+         <a class="logo-class" href="#">
       <img src="/img/logo_canchas.png" alt="Logo de pagina">
     </a>
         </header>
