api totalmente conectada a BD en interfaz de arbitros

--- a/html/Loginn.html
+++ b/html/Loginn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio de Sesión - Canchibol</title>
-     <link rel="stylesheet" href="/css/login.css" />
+     <link rel="stylesheet" href="../css/login.css"/>
 
 </head>
 
@@ -34,7 +34,7 @@
 
       <div class="extra-links">
         <a href="#">¿Olvidaste tu contraseña?</a><br>
-        ¿No tienes cuenta? <a href="Registro.html">Regístrate</a>
+        ¿No tienes cuenta? <a href="../html/Registro.html">Regístrate</a>
       </div>
     </form>
   </div>
@@ -69,6 +69,6 @@
       }
     });
   </script>
-  <script src="/javascript/login.js"></script>
+  <script src="../javascript/login.js"></script>
 </body>
 </html>
