--- a/html/arbitros.html
+++ b/html/arbitros.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Árbitros</title>
-  <link rel="stylesheet" href="/css/arbitros.css">
+  <link rel="stylesheet" href="../css/arbitros.css">
 </head>
 
 <body>
   <header>
     <div class="header-top">
       <a class="logo-class" href="#">
-        <img src="/img/logo_canchas.png" alt="Logo de pagina">
+        <img src="../img/logo_canchas.png" alt="Logo de pagina">
       </a>
       <h1>Administración de Canchas de Fútbol</h1>
     </div>
@@ -20,14 +20,14 @@
     <div class="header-bottom">
       <nav>
         <ul>
-          <li><a href="/html/admin.html">Partidos</a></li>
+          <li><a href="../html/admin.html">Partidos</a></li>
           <li><a href="#">Árbitros</a></li>
-          <li><a href="/html/equipos.html">Equipos</a></li>
+          <li><a href="../html/equipos.html">Equipos</a></li>
         </ul>
       </nav>
 
       <div id="sesion-item">
-        <a href="/html/Inicioo.html" class="logout-btn">Cerrar Sesión</a>
+        <a href="../html/Inicioo.html" class="logout-btn">Cerrar Sesión</a>
       </div>
     </div>
 
@@ -70,7 +70,7 @@
     </div>
   </section>
 
-  <script src="/javascript/arbitros.js"></script>
+  <script src="../javascript/arbitros.js"></script>
 
 </body>
 
