--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-   <link rel="stylesheet" href="/CSS/inicio.css" />
+   <link rel="stylesheet" href="../css/inicio.css" />
 
 </head>
 <body>
     <header>
          <a class="logo-class" href="#">
-      <img src="/img/logo_canchas.png" alt="Logo de pagina">
+      <img src="../img/logo_canchas.png" alt="Logo de pagina">
     </a>
         </header>
     <main>
@@ -18,8 +18,8 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="/html/Loginn.html" class="btn">Iniciar sesión</a>
-                <a href="/html/Registro.html" class="btn">Registrarse</a>
+                <a href="../html/Loginn.html" class="btn">Iniciar sesión</a>
+                <a href="../html/Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
          <div class="encabezado">
@@ -194,7 +194,7 @@
     <footer>
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
-<script src="/javascript/inicio.js"> </script> 
+<script src="../javascript/inicio.js"> </script> 
     
 </body>
 </html>
