--- a/html/Registro.html
+++ b/html/Registro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/registro.css">
+  <link rel="stylesheet" href="../css/registro.css">
   <title>Registro</title>
 </head>
 
@@ -41,12 +41,12 @@
       <button type="submit" class="btn-register">Registrarse</button>
 
       <div class="login-link">
-        ¿Ya tienes una cuenta? <a href="Loginn.html">Inicia sesión</a>
+        ¿Ya tienes una cuenta? <a href="../html/Loginn.html">Inicia sesión</a>
       </div>
     </form>
   </div>
 
-  <script src="/javascript/registro.js"> </script>
+  <script src="../javascript/registro.js"> </script>
 
 </body>
 </html>
