--- a/html/admin.html
+++ b/html/admin.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Administrador</title>
-  <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="../css/admin.css">
 </head>
 
 <body>
   <header>
     <div class="header-top">
       <a class="logo-class" href="#">
-        <img src="/img/logo_canchas.png" alt="Logo de pagina">
+        <img src="../img/logo_canchas.png" alt="Logo de pagina">
       </a>
       <h1>Administración de Canchas de Fútbol</h1>
     </div>
@@ -21,13 +21,13 @@
       <nav>
         <ul>
           <li><a href="#">Partidos</a></li>
-          <li><a href="/html/arbitros.html">Árbitros</a></li>
-          <li><a href="/html/equipos.html">Equipos</a></li>
+          <li><a href="../html/arbitros.html">Árbitros</a></li>
+          <li><a href="../html/equipos.html">Equipos</a></li>
         </ul>
       </nav>
 
       <div id="sesion-item">
-        <a href="/html/Inicioo.html">Cerrar Sesión</a>
+        <a href="../html/Inicioo.html">Cerrar Sesión</a>
       </div>
     </div>
   </header>
