--- a/html/equipos.html
+++ b/html/equipos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="../css/admin.css">
     <title>Equipos</title>
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <div class="header-top">
             <a class="logo-class" href="#">
-                <img src="/img/logo_canchas.png" alt="Logo de pagina">
+                <img src="../img/logo_canchas.png" alt="Logo de pagina">
             </a>
             <h1>Administración de Canchas de Fútbol</h1>
         </div>
@@ -20,14 +20,14 @@
 
             <nav>
                 <ul>
-                    <li><a href="/html/admin.html">Partidos</a></li>
-                    <li><a href="/html/arbitros.html">Árbitros</a></li>
+                    <li><a href="../html/admin.html">Partidos</a></li>
+                    <li><a href="../html/arbitros.html">Árbitros</a></li>
                     <li><a href="#">Equipos</a></li>
                 </ul>
             </nav>
 
             <div id="sesion-item">
-                <a href="/html/Inicioo.html">Cerrar Sesión</a>
+                <a href="../html/Inicioo.html">Cerrar Sesión</a>
             </div>
         </div>
     </header>
