elimine comentario dudoso

--- a/html/arbitros.html
+++ b/html/arbitros.html
@@ -36,7 +36,6 @@
   <section id="arbitros" class="modulo">
     <h2>Lista de Árbitros</h2>
 
-    <!-- ✅ Añadí un mensaje de estado para feedback al usuario -->
     <div id="mensajeEstado" class="mensaje-estado" style="display: none;"></div>
 
 
@@ -49,7 +48,7 @@
         <option value="false">No disponible</option>
       </select>
       <button type="submit" id="btnGuardar">Guardar</button>
-      <button type="button" id="btnCancelar">Cancelar</button> <!-- ✅ Nuevo -->
+      <button type="button" id="btnCancelar">Cancelar</button> 
     </form>
 
     <div class="tabla-container">
